cmake_minimum_required(VERSION 3.14)
project(arglorithms_competition)

set(CMAKE_CXX_STANDARD 14)

add_executable(arglorithms_competition
        chapter2/ex1.1.cpp
        chapter2/ex1.2.cpp
        chapter2/ex1.3.cpp
        chapter2/ex1.4.cpp
        chapter2/ex1.5.cpp chapter2/ex2.1.cpp chapter2/question2_1.cpp chapter2/question2_3.cpp chapter2/question2_4.cpp c++primer/test.cpp chapter3/question3_1.cpp chapter3/question3_2.cpp chapter3/question3_3.cpp chapter3/question3_6.cpp)